Adds a new testcase to test innerclasses that don't make part of final program. Adds reverse order set to group classes that make part of final program.